WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29342
Hardware-accelerated opacity transition on inline asserts
https://bugs.webkit.org/show_bug.cgi?id=29342
Summary
Hardware-accelerated opacity transition on inline asserts
Simon Fraser (smfr)
Reported
2009-09-17 12:54:01 PDT
Created
attachment 39718
[details]
Testcase When running a hardware-accelerated opacity transition on an inline, we hit an assertion at: ASSERTION FAILED: !object || object->isBox() (/Volumes/InternalData/Development/webkit/OpenSource/WebCore/rendering/RenderBox.h:382 WebCore::RenderBox* WebCore::toRenderBox(WebCore::RenderObject*))
Attachments
Testcase
(562 bytes, text/html)
2009-09-17 12:54 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(3.86 KB, patch)
2009-09-17 13:07 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-09-17 13:07:23 PDT
Created
attachment 39719
[details]
Patch
Dave Hyatt
Comment 2
2009-09-17 13:09:23 PDT
Comment on
attachment 39719
[details]
Patch r=me, although a comment in the code about why an empty size is being passed in might be helpful.
Simon Fraser (smfr)
Comment 3
2009-09-17 13:13:10 PDT
I added a comment.
http://trac.webkit.org/changeset/48489
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug