2009-09-17  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt.

        Hardware-accelerated opacity transition on inline asserts
        https://bugs.webkit.org/show_bug.cgi?id=29342

        Remove an erroneous toRenderBox() that could be called on a RenderInline; we can just
        pass an empty size, because the box size is only required for transform animations.

        Test: compositing/transitions/opacity-on-inline.html

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::startTransition):

Canonical link: https://commits.webkit.org/40054@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48489 268f45cc-cd09-0410-ab3c-d52691b4dbfc